# fastcolor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
amp_function_4g/: README.md  evaluate_m2.py  me_wrapper.py  utils.py
amp_function_4g/Cards/: cuts.yaml
config/: dataset.yaml  default.yaml  gg_4g.yaml  gg_5g.yaml  gg_6g.yaml  gg_7g.yaml  gnn-defaults.yaml  gnn-naive-r.yaml  lgatr-defaults.yaml  lgatr-naive-r.yaml  lgatr-naive.yaml  mlflow.yaml  mlp-defaults.yaml  mlp-lorentz-FC.yaml  mlp-lorentz-r.yaml  mlp-lorentz.yaml  transformer-defaults.yaml  transformer-grokking.yaml  transformer-naive-r.yaml  transformer-naive.yaml  transformerx-naive-r.yaml
config/model/: gnn-200k.yaml  lgatr-100k.yaml  lgatr-1M.yaml  lgatr-200k.yaml  lgatr-3M.yaml  lgatr-500k.yaml  lgatr-minimal.yaml  lgatr.yaml  mlp-100k.yaml  mlp-1M.yaml  mlp-200k.yaml  mlp-3M.yaml  mlp-500k.yaml  mlp.yaml  transformer-100k.yaml  transformer-200k.yaml  transformer-500k.yaml  transformerx-200k.yaml
config/paper/: config-GNN-dbard_4g.yaml  config-GNN-dbard_5g.yaml  config-GNN-dbard_6g.yaml  config-GNN-dbard_7g.yaml  config-GNN-ddbar_uubar2g_co1.yaml  config-GNN-ddbar_uubar2g_co2.yaml  config-GNN-ddbar_uubar3g_co1.yaml  config-GNN-ddbar_uubar3g_co2.yaml  config-GNN-ddbar_uubar4g_co1.yaml  config-GNN-ddbar_uubar4g_co2.yaml  config-GNN-ddbar_uubar5g_co1.yaml  config-GNN-ddbar_uubar5g_co2.yaml  config-GNN-gg_4g.yaml  config-GNN-gg_5g.yaml  config-GNN-gg_6g.yaml  config-GNN-gg_7g.yaml  config-GNN-gg_ddbar2g.yaml  config-GNN-gg_ddbar3g.yaml  config-GNN-gg_ddbar4g.yaml  config-GNN-gg_ddbar5g.yaml  config-GNN-gg_ddbaruubar0g_co1.yaml  config-GNN-gg_ddbaruubar0g_co2.yaml  (+90 more)
madrecolor/: main.py  models.py  plots.py
runfiles/: interactive.sh  train.sh
src/: main.py  plots.py
template_files/: README.md
(+79 files in other folders)
