[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "madrecolor"
version = "0.1.0"
description = "Machine-Learned Leading-Color Amplitude Reweighting for MadGraph"
authors = [
    { name="Ramon Winterhalder", email="ramon.winterhalder@unimi.it" },
    { name="Javier Marino Villadamigo", email="marino@thphys.uni-heidelberg.de" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = {"Repository" = "https://github.com/madgraph-ml/madrecolor"}
dependencies = [
    "numpy<2.0",
    "black==22.3.0",
    "einops",
    "opt_einsum",
    "scikit-hep",
    "torch>=2.2",
    "hydra-core>=1.2",
    "mlflow"==2.22.0",
]

[tool.black]
line-length = 90